# RealTimeBattle_reloaded

./: AUTHORS  Makefile.in  aclocal.m4  configure  configure.in
RealTimeBattle/: .cvsignore  AAAATHIS_REPOSITORY_IS_OUT_OF_DATE  INSTALL  Makefile.am  README  acconfig.h  acinclude.m4  autogen.sh  configure.in
RealTimeBattle/Arenas/: Makefile.am  Original.arena
RealTimeBattle/Arenas/CVS/: Entries  Repository
RealTimeBattle/CVS/: Entries  Repository
RealTimeBattle/Documentation/: .cvsignore  BUGS.sgml  CVS-Help.sgml  ChangeLog.sgml  FAQ.sgml  GadgetSpec.txt  Makefile.am  Net.txt  RealTimeBattle.sgml  TODO.sgml  latex2dvi
RealTimeBattle/Documentation/CVS/: Entries  Repository
RealTimeBattle/Documentation/Spanish/CVS/: Repository
RealTimeBattle/Robots/: .cvsignore  Makefile.am
RealTimeBattle/Robots/CVS/: Entries  Repository
RealTimeBattle/Robots/empty/: .cvsignore  Makefile.am
RealTimeBattle/Robots/empty/CVS/: Entries  Repository
RealTimeBattle/Robots/rotate_and_fire/: Makefile.am  rotate_and_fire.cc  rotate_and_fire.h  rotate_and_fire_signal.cc
RealTimeBattle/Robots/rotate_and_fire/CVS/: Entries  Repository
RealTimeBattle/Robots/seek_and_destroy/: Makefile.am  seek_and_destroy.cc
RealTimeBattle/Robots/seek_and_destroy/CVS/: Entries  Repository
RealTimeBattle/intl/: .cvsignore
RealTimeBattle/intl/CVS/: Entries  Repository
RealTimeBattle/new_cvs/CVS/: Entries  Repository
RealTimeBattle/new_cvs/Core/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs
RealTimeBattle/new_cvs/Core/Arenas/: Circle.arena  Pool.arena
RealTimeBattle/new_cvs/Core/CVS/: Entries  Repository
RealTimeBattle/new_cvs/Core/doc/: RTB_in_UML.zuml  RealTimeBattle.txt  rtbcore-1.1.0-doc.tgz
RealTimeBattle/new_cvs/Core/include/: ArenaBase.h  ArenaController.h  ArenaObject.h  ArenaObserver.h  ArenaParser.h  Ball.h  Collision.h  Colour.h  DebugLog.h  Extras.h  Functors.h  GeometricalObjects.h  IntlDefs.h  LandingZone.h  Messagetypes.h  MovingObject.h  Options.h  Robot.h  RobotController.h  RobotMessageIO.h  RobotProcess.h  RobotTool.h  Shape.h  ShapeVisitor.h  Shot.h  StartZone.h  Structs.h  Team.h  TextLog.h  Timer.h  Various.h  Vector2D.h  Wall.h  fdstream.h
RealTimeBattle/new_cvs/Core/po/: Makefile  Makefile.in  POTFILES  RealTimeBattle.pot  de.gmo  de.po  es.gmo  es.po  gl.gmo  gl.po  ja.gmo  ja.po  pl.gmo  pl.po  pt.gmo  pt.po  sv.gmo  sv.po
RealTimeBattle/new_cvs/Core/src/: ArenaBase.cc  ArenaController.cc  ArenaObject.cc  ArenaObserver.cc  ArenaParser.cc  Ball.cc  Collision.cc  Colour.cc  DebugLog.cc  Extras.cc  GeometricalObjects.cc  LandingZone.cc  Makefile.am  MovingObject.cc  Options.cc  RealTimeBattle.cc  Robot.cc  RobotController.cc  RobotMessageIO.cc  RobotProcess.cc  RobotTool.cc  Shape.cc  Shot.cc  Structs.cc  Team.cc  TextLog.cc  Timer.cc  Various.cc  Vector2D.cc
RealTimeBattle/new_cvs/GTKmm-GUI/CVS/: Repository
RealTimeBattle/po/: .cvsignore  Makefile.in.in  POTFILES.in  de.po  es.po  fr.po  gl.po  ja.po  pl.po  pt.po  sv.po
RealTimeBattle/po/CVS/: Entries  Repository
RealTimeBattle/src/: .cvsignore  Doxyfile  Makefile.am
RealTimeBattle/src/CVS/: Entries  Repository
RealTimeBattle/src/Common/: Console.cc  Console.h  Explosion.cc  Explosion.h  GeometricalObjects.cc  GeometricalObjects.h  InfoClasses.h  InformationDistributor.cc  InformationDistributor.h  IntlDefs.h  Makefile.am  Messagetypes.h  MovingObject.h  Option.cc  Option.h  OptionHandler.cc  OptionHandler.h  Process.cc  Process.h  RollingObject.cc  RollingObject.h  Shape.cc  Shape.h  Shot.cc  Shot.h  String.cc  String.h  Structs.cc  Structs.h  Various.cc  Various.h  Vector2D.cc  Vector2D.h  Wall.h
RealTimeBattle/src/Common/CVS/: Entries  Repository
RealTimeBattle/src/Core/: Arena.cc  Arena.h  ArenaController.cc  ArenaController.h  Event.h  EventGT.cc  EventGT.h  EventHandler.cc  EventHandler.h  EventRT.cc  EventRT.h  Makefile.am  RealTimeBattle.cc  Robot.cc  Robot.h  Rotation.cc  Rotation.h  SubSquare.cc  SubSquare.h  SubSquareIterators.cc  SubSquareIterators.h  Team.cc  Team.h  Timer.cc  Timer.h  Tournament.cc  Tournament.h
RealTimeBattle/src/Core/CVS/: Entries  Repository
RealTimeBattle/src/Gadgets/: .cvsignore  AllGadgets.cc  AllGadgets.h  ArenaGadget.h  CommunicationGadget.cc  CommunicationGadget.h  DefenseGadget.cc  DefenseGadget.h  EngineGadget.cc  EngineGadget.h  EnvironmentGadget.cc  EnvironmentGadget.h  ExplosionGadget.cc  ExplosionGadget.h  Function.h  Gadget.cc  Gadget.h  GadgetSet.cc  GadgetSet.h  GeometryGadget.cc  GeometryGadget.h  Makefile.am  RobotBodyGadget.cc  RobotBodyGadget.h  Script.cc  Script.h  SensorGadget.cc  SensorGadget.h  ShotGadget.cc  ShotGadget.h  Value.cc  Value.h  Variable.cc  Variable.h  WallGadget.cc  WallGadget.h  WeaponGadget.cc  WeaponGadget.h
RealTimeBattle/src/Gadgets/CVS/: Entries  Repository
RealTimeBattle/src/Gui/: Makefile.am
RealTimeBattle/src/Gui/Gtk/: Gui.h  (+30 more)
RealTimeBattle/src/Network/: .cvsignore  ClientSocket.cc  ClientSocket.h  Makefile.am  NetConnection.cc  NetConnection.h  Packets.cc  Packets.h  ServerPackets.cc  ServerPackets.h  ServerSocket.cc  ServerSocket.h  SimpleProcess.cc  SimpleProcess.h  TournamentAgreementPackets.cc  TournamentAgreementPackets.h  TournamentPackets.cc  TournamentPackets.h
RealTimeBattle/src/RobotClient/: Makefile.am  RobotClient.cc  RobotClient.h  RobotPacketFactory.cc  RobotPacketFactory.h
RealTimeBattle/utils/CVS/: Repository
Robots/rotate_and_fire/: CMakeLists.txt  Makefile.in
Robots/thomas2/: CMakeLists.txt  Makefile.in
Robots/xt-bot/: CMakeLists.txt  Makefile.in
cmake_test/: CMakeLists.txt
cmake_test/RealtimeBattle/: CMakeLists.txt
cmake_test/RealtimeBattle/include/: Makefile
cmake_test/RealtimeBattle/src/: RealTimeBattle.cc
cmake_test/Robots/empty/: CMakeLists.txt  Makefile.in
cmake_test/Robots/jBot/: jBot.robot
cmake_test/Robots/joypad_robot/: CMakeLists.txt
cmake_test/Robots/seek_and_destroy/: CMakeLists.txt
cmake_test/Robots/thomas2/: CMakeLists.txt
cmake_test/src/: ClientInterface.cc
(+171 files in other folders)
